# Python_Learning

./: Learning.py  PyQt5_base_code.txt  README.md  tests.py
10_Number_Guessing_Game/: app.py
11_Jokenpo_Game/: app.py
12_Dice_Roller/: app.py
12_Dice_Roller_Program/: app.py
13_Banking_Program/: app.py
13_Encryption _Program/: app.py
14_Credit_Card_Validator/: app.py
14_Slot_Machine_Program/: app.py
15_Banking_Program/: app.py
15_Encrypty_Program/: app.py
16_Hangman_Game/: app.py  wordlist.py
17_Alarm_Clock/: app.py
18_Digital_Clock/: app.py
19_Stopwatch_Program/: app.py
1_MadLibs_Game/: app.py
1_Madlibs_Game/: app.py
1_Simple_Calculator/: app.py
20_Weather_App/: app.py
2_Simple_Calculator/: app.py
2_Weight_Convert/: app.py
3_Temperature_Convert/: app.py
3_Weight_Convert/: app.py
3_Weight_Converter/: app.py
4_Email_Slicer/: app.py
4_Temperature_Convert/: app.py
4_Temperature_Converter/: app.py
5_Compound_Calculator/: app.py
5_Compound_Interest_Calculator/: app.py
6_Countdown_Program/: app.py
6_Timer/: app.py
7_Shopping_Car/: app.py
7_Shopping_Cart_Program/: app.py
8_Quiz_Game/: app.py
9_Concession_Stand/: app.py
9_Concession_Stand_Program/: app.py
Exercises/: ex002.py  ex003.py  ex004.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py  ex013.py  ex014.py  ex015.py  ex016.py  ex017.py  ex018.py  (+96 more)
Projects_Learning/utilities_module/: README.md  pyproject.toml
Projects_Learning/utilities_module/src/gui_utils/: __init__.py
Projects_Learning/utilities_module/tests/: tests.py
(+67 files in other folders)
