[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities_module"
version = "0.1.0"
description = "Python Package with utilities fuctions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="João Miguel", email="jmocarvallho7123@gmail.com"}
]
license = { text = "MIT" }

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
